# camCapture

./: CMakeLists.txt  LICENSE  README.md
cmake/: Toolchain-arm-linux.cmake  Toolchain-x86_64-linux.cmake
cmake/modules/: FindJSONCPP.cmake  FindLOKI.cmake  FindMVIMPACT.cmake  FindPUGIXML.cmake  FindROBBIE.cmake  FindVISUALODOMETRY.cmake  FindVITALS.cmake
include/: BuildVersion.hpp  ClassExtraction.hpp  EntryPoint.hpp
resources/: config.json
src/: EntryPoint.cpp
